<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/user_form_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/spinAppeal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ms_floatingLabelText="@string/appeal"
                    app:ms_hint="@string/select_appeal"
                    app:ms_hintColor="@color/secondary_text_dark"
                    app:ms_hintTextSize="16dp"
                    app:ms_multiline="true" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputLayoutSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="60"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtInputSurname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/surname"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputLayoutName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="60"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtInputName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputLayoutPatronymic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="60"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtInputPatronymic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/patronymic"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputLayoutPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="18"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtInputPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:text="@string/phone_country_code_russia" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputLayoutMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="60"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtInputMail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputLayoutVIN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="17"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtInputVIN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vin"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/spinYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ms_floatingLabelText="@string/manufacture_year"
                    app:ms_hint="@string/select_your_manufacture_year"
                    app:ms_hintColor="@color/secondary_text_dark"
                    app:ms_hintTextSize="16dp"
                    app:ms_multiline="true" />

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/spinClass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ms_floatingLabelText="@string/model_class"
                    app:ms_hint="@string/select_your_model_class"
                    app:ms_hintColor="@color/secondary_text_dark"
                    app:ms_hintTextSize="16dp"
                    app:ms_multiline="true" />

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/spinCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ms_floatingLabelText="@string/city"
                    app:ms_hint="@string/select_your_city"
                    app:ms_hintColor="@color/secondary_text_dark"
                    app:ms_hintTextSize="16dp"
                    app:ms_multiline="true" />

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/spinDealer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ms_floatingLabelText="@string/dealer"
                    app:ms_hint="@string/select_your_dealer"
                    app:ms_hintColor="@color/secondary_text_dark"
                    app:ms_hintTextSize="16dp"
                    app:ms_multiline="true" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatBtnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#BDBDBD"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_mail_outline_black_24dp" />


</FrameLayout>




